--- a/README.html
+++ b/README.html
@@ -59,14 +59,22 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h2>Introduction</h2>
 <p>The merits of reproducible research are widely acknowledged by scholars in out field [e.g., (Mesquita et al. 2003); (King 1995); (Rich 2013)]. Although few political science journals have clear replication policies (Gherghina and Katsanidou 2013) and replications are still not published as much as they should (Carsey 2014), there is a growing debate on how to make the discipline more open and reproducible. In the context of this debate we discuss how graduate education in particular is an interesting place for replications. The replication of a paper can guide students during the transition from training to themselves undertaking research. At the same time, graduate students are sufficiently knowledgable to undertake a replication relatively independently. We identify three key area in which we argue that replication can help students (and teachers):</p>
 <ol style="list-style-type: decimal">
-<li>familiase students with cutting-edge research tools</li>
+<li>familiarise students with cutting-edge research tools</li>
 <li>experience the practical difficulties of research work (statistical work)</li>
 <li>help produce a publishable paper.</li>
 </ol>
 <p>In the sections below we will develop these ideas in more detail.</p>
 </div>
-<div id="familiarity-with-research-tools" class="section level2">
-<h2>Familiarity with research tools</h2>
+<div id="familiarise-with-research-tools" class="section level2">
+<h2>Familiarise with research tools</h2>
+<p>One of the key benefits of replications is that is introduces students to current research and its practice. In many fields, the methodology is rapidly evolving often as a result of more data and data analysis tools.</p>
+<p>Computation environments such the R framework (R Core Team 2014) or MatLab (2014) have greatly facilitated the development and implementation of new methods in both qualitative and quantitative research. Personally designed methods can be packaged and made publicly available. This had lead to a large rise in the number of algorithms being available, often written by the authors themselves. However, non-commericial methods through which these software packages are distributed, combined with the vast number of them, can make it a somewhat daunting task determine the right software.</p>
+<p>Replications generally concern published and peer-reviewed articles,</p>
+<ul>
+<li>textual analysis</li>
+<li>computational simulations</li>
+<li>data availability -&gt; bring home, make data available</li>
+</ul>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
@@ -74,7 +82,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <p>Gherghina, Sergiu, and Alexia Katsanidou. 2013. “Data Availability in Political Science Journals.” <em>European Political Science</em>.</p>
 <p>King, Gary. 1995. “Replication, Replication.” <em>PS: Political Science &amp; Politics</em> 28 (03): 444–452.</p>
 <p>Mesquita, Bruce Bueno de, Nils Petter Gleditsch, Patrick James, Gary King, Claire Metelits, James Lee Ray, Bruce Russett, Håvard Strand, and Brandon Valeriano. 2003. “Symposium on Replication in International Studies Research.” <em>International Studies Perspectives</em> 4 (1): 72–107.</p>
+<p>R Core Team. 2014. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="http://www.R-project.org/">http://www.R-project.org/</a>.</p>
 <p>Rich, Timothy S. 2013. “Publishing as a Graduate Student: A Quick and (Hopefully) Painless Guide to Establishing Yourself as a Scholar.” <em>PS: Political Science &amp; Politics</em> 46 (02): 376–379.</p>
+<p>The MathWorks, Inc. 2014. <em>MATLAB and Statistics Toolbox</em>. Natick, Massachusetts, United States. <a href="http://www.mathworks.com/products/matlab/">http://www.mathworks.com/products/matlab/</a>.</p>
 </div>
 
 
