--- a/README.html
+++ b/README.html
@@ -83,14 +83,20 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>data availability + bring home, make data available</li>
 </ul>
 </div>
+<div id="practical-difficulties-of-research" class="section level2">
+<h2>Practical Difficulties of Research</h2>
+<p>A good example is the replication of on the paper <strong>Evaluating the Nuclear Peace Hypothesis</strong> (Rauchhaus 2009) done by Bell and Miller (2013).</p>
+</div>
 <div id="references" class="section level2">
 <h2>References</h2>
+<p>Bell, Mark S, and Nicholas L Miller. 2013. “Questioning the Effect of Nuclear Weapons on Conflict.” <em>Journal of Conflict Resolution</em>: 0022002713499718.</p>
 <p>Carsey, Thomas M. 2014. “Making DA-RT a Reality.” <em>PS: Political Science &amp; Politics</em> 47 (01): 72–77.</p>
 <p>Gherghina, Sergiu, and Alexia Katsanidou. 2013. “Data Availability in Political Science Journals.” <em>European Political Science</em>.</p>
 <p>Huang, Mu-Hsuan, Ssu-Han Chen, Chia-Ying Lin, and Dar-Zen Chen. 2014. “Exploring Temporal Relationships Between Scientific and Technical Fronts: a Case of Biotechnology Field.” <em>Scientometrics</em> 98 (2): 1085–1100. <a href="doi:[10.1007/s11192-013-1054-0](http://dx.doi.org/10.1007/s11192-013-1054-0)">doi:[10.1007/s11192-013-1054-0](http://dx.doi.org/10.1007/s11192-013-1054-0)</a>. <a href="http://dx.doi.org/10.1007/s11192-013-1054-0">http://dx.doi.org/10.1007/s11192-013-1054-0</a>.</p>
 <p>King, Gary. 1995. “Replication, Replication.” <em>PS: Political Science &amp; Politics</em> 28 (03): 444–452.</p>
 <p>Mesquita, Bruce Bueno de, Nils Petter Gleditsch, Patrick James, Gary King, Claire Metelits, James Lee Ray, Bruce Russett, Håvard Strand, and Brandon Valeriano. 2003. “Symposium on Replication in International Studies Research.” <em>International Studies Perspectives</em> 4 (1): 72–107.</p>
 <p>R Core Team. 2014. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="http://www.R-project.org/">http://www.R-project.org/</a>.</p>
+<p>Rauchhaus, Robert. 2009. “Evaluating the Nuclear Peace Hypothesis a Quantitative Approach.” <em>Journal of Conflict Resolution</em> 53 (2): 258–277.</p>
 <p>Rich, Timothy S. 2013. “Publishing as a Graduate Student: A Quick and (Hopefully) Painless Guide to Establishing Yourself as a Scholar.” <em>PS: Political Science &amp; Politics</em> 46 (02): 376–379.</p>
 <p>The MathWorks, Inc. 2014. <em>MATLAB and Statistics Toolbox</em>. Natick, Massachusetts, United States. <a href="http://www.mathworks.com/products/matlab/">http://www.mathworks.com/products/matlab/</a>.</p>
 </div>
