--- a/README.html
+++ b/README.html
@@ -78,13 +78,10 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>ability to work collaboratively on data analysis (e.g. .R files)</li>
 </ul>
 <p>More recently, the rise of continuous integration tools such as Travil CI, have created the additional advantage that code can continuously be tested automatically. For a full discussion of continuous integration in reproducible research see Fitzjohn ().</p>
-<p>During the dat aanalysis phase, working with combinations of different package can require quite some technical expertise, especially when a combination of different packages is required. Q&amp;A sites such as stackoverflow - and more recently the ones based o the open-source equivalent askbot, such as sagemath - allow users to post questions which can be answered by experiences other users (who gain reputation). In addition to solving the direct issue of user posting, experienced users often offer other insights about interpretation of results,</p>
+<p>During the data analysis phase, working with combinations of different package can require quite some technical expertise, especially when a combination of different packages is required. Q&amp;A sites such as stackoverflow - and more recently the ones based o the open-source equivalent askbot, such as sagemath - allow users to post questions which can be answered by experiences other users (who gain reputation). In addition to solving the direct issue of user posting, experienced users often offer other insights about, for instance, additional problems in the approach, new methods / tools that could be used, interpretation of results.</p>
+<p>In addition to Q&amp;A sites, there are also platforms specifically dedicated to data interpretation. Figshare for example is an open access platform where graphs from base graphics or ggplot2 can</p>
 <ul>
-<li>Robustness to specification</li>
-<li><ul>
-<li>computational simulations</li>
-</ul></li>
-<li>data availability + bring home, make data available</li>
+<li>Shiny apps</li>
 </ul>
 </div>
 <div id="practical-difficulties-of-research" class="section level2">
